# dialog-driven-delivery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Claude.md  DESIGN.md  LICENSE  PLAN.md  README.md  WHATS_NEW.md  d3.config.md  d3.platform.yaml  generate.py  install.sh  pyproject.toml
.claude/: uncertainty-markers-examples.md
.claude-plugin/: marketplace.json
.claude/agents/: refinement-developer.md  story-developer.md  story-reviewer.md  test-fix-specialist.md
.claude/commands/: CODING_README.md  README.md  SPEC_README.md  address-pr-feedback.md  commit-and-open-pr.md  create-feature-and-stories.md  create-feature-spec.md  create-spec.md  create-technical-spec.md  create-user-stories-from-spec.md  decompose-feature.md  feature-decomposer.md  generate-feature-brief.md  generate-prd.md  generate-product-prd.md  implement-story.md  refine-spec.md  (+4 more)
config/: example-config-atlassian.md  example-config-atlassian.yaml  example-config-markdown.md  example-config-markdown.yaml  example-config-mixed.md  example-config-mixed.yaml
config-samples/: d3.config.atlassian.md  d3.config.azure-devops.md  d3.config.linear.md  d3.config.markdown.md
d3/: .mcp.json  README.md  d3-config-sample.md  d3.platform.yaml  pyproject.toml
d3-atlassian/: README.md
d3-markdown/: QUICKSTART.md  README.md
docs/: d3-architecture.excalidraw  d3-sequence-create-product-spec-markdown.excalidraw  d3-sequence-create-tech-spec-confluence.excalidraw  uncertainty-markers-examples.md  uncertainty-markers.md
metadata/: d3-markdown.yaml  d3.yaml
samples/: d3.config.atlassian.md
(+142 files in other folders)
